--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Her-fairy-prince_70582
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 70582-h/images/cover.jpg
 creator:
   author:
     agent_name: Warden, Gertrude
@@ -9,6 +12,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/55805
     wikipedia: https://en.wikipedia.org/wiki/Gertrude_Warden
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/70582#Her-fairy-prince
 gutenberg_issued: '2023-04-18'
 identifiers:
   gutenberg: '70582'
